# Natbox

./: CMakeLists.txt  README.md  dogmas.txt
experiment/: bazier.py  grass_motion.py  kinetics.py  particle.py
ini/: imgui.ini
res/study/grass/models/: grass_1.json  grass_2.json  grass_3.json  grass_4.json
shaders/study/grass/: grass.frag  grass.geom  grass.tesc  grass.tese  grass.vert  grass_attribs.geom  grass_attribs.tesc  grass_attribs.tese  grass_attribs.vert  wind.frag  wind.vert
shaders/study/terrain/: terrain.frag  terrain.vert
src/: main.cpp
src/app/landscape/: app.cpp  app.h  config.h
src/app/study/grass/: app.cpp  app.h  collection.cpp  collection.h  config.h  entity.cpp  entity.h  grass.cpp  grass.h  grass_blade.cpp  grass_blade.h  grass_collection.cpp  grass_collection.h  grass_entity.cpp  grass_entity.h  grass_model.cpp  grass_model.h  grass_physics.cpp  grass_physics.h  grass_renderer.cpp  grass_renderer.h  physics.cpp  physics.h  plant.cpp  plant.h  plant_node.cpp  plant_node.h  renderer.cpp  renderer.h  types.h  wind.cpp  wind.h  wind_entity.cpp  wind_entity.h  wind_renderer.cpp  wind_renderer.h
src/app/study/terrain/: app.cpp  app.h  config.h  terrain.cpp  terrain.h  tile.cpp  tile.h  types.h
src/engine/core/: camera.cpp  camera.h  types.h
src/engine/platform/: debug.cpp  debug.h  i_platform_app.cpp  i_platform_app.h  input.cpp  input.h  timer.cpp  timer.h
src/engine/platform/gui/: imgui_impl_glfw_gl3.cpp
src/engine/renderer/: image.cpp  image.h  mesh.cpp  mesh.h  render_device.cpp  render_device.h  types.h
src/engine/renderer/gl/: buffer.cpp  buffer.h  frame_buffer.cpp  frame_buffer.h  program.cpp  program.h  shader.cpp  shader.h  texture_2d.cpp  texture_2d.h  vertex_array.cpp  vertex_array.h
src/engine/util/: log.h  math.cpp  math.h  timing.cpp  timing.h
